# first-blog-flask

./: .gitignore  Makefile  README.md  app.py  blog.db  pyproject.toml
directory/: app.py  blog.db
directory/temlates/: base.html  post-update.html
first-blog-flask/: app.py  blog.db
first-blog-flask/temlates/: create-article.html  index.html  posts.html
first-blog-flask/templates/: base.html  index.html  post_detail.html
templates/: base.html  create-article.html
